made auth with token

--- a/src/app/+login/login.component.html
+++ b/src/app/+login/login.component.html
@@ -5,7 +5,7 @@
         </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <form class="login-form" [formGroup]="loginForm" (ngSubmit)="login()">
+        <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <mat-form-field class="example-full-width">
                 <input formControlName="email" required type="email" matInput placeholder="E-mail">
             </mat-form-field>
