--- a/src/app/+task/tasks.component.html
+++ b/src/app/+task/tasks.component.html
@@ -1,9 +1,9 @@
 <h2>Hello from tasks</h2>
 <mat-menu #appMenu="matMenu">
-  <button mat-menu-item>Settings</button>
-  <button mat-menu-item>Help</button>
+    <button mat-menu-item>Settings</button>
+    <button mat-menu-item>Help</button>
 </mat-menu>
 
 <button mat-icon-button [matMenuTriggerFor]="appMenu">
-  <mat-icon>menu</mat-icon>
+    <mat-icon>more_vert</mat-icon>
 </button>
