add base interface for categories page

--- a/src/app/+categories/main/main.component.html
+++ b/src/app/+categories/main/main.component.html
@@ -17,6 +17,8 @@
                 <mat-icon>add</mat-icon>
             </button></mat-grid-tile>
     </mat-grid-list>
-    <router-outlet></router-outlet>
+    <app-categories>
+        <router-outlet></router-outlet>
+    </app-categories>
 
 </mat-card>
