--- a/src/app/+categories/categories.component.html
+++ b/src/app/+categories/categories.component.html
@@ -1,5 +1,3 @@
-<mat-tab-group>
-        <mat-tab label="First"> Content 1 </mat-tab>
-        <mat-tab label="Second"> Content 2 </mat-tab>
-        <mat-tab label="Third"> Content 3 </mat-tab>
+<mat-tab-group *ngFor="let categorie of categories">
+        <mat-tab label= {{categorie.name}} > {{categorie.name}} </mat-tab>
 </mat-tab-group>
