--- a/src/app/+categories/task/task.component.html
+++ b/src/app/+categories/task/task.component.html
@@ -1,10 +1,8 @@
-<mat-card class="example-card">
+<mat-card class="task-card">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>{{task.title}}</mat-card-title>
     <mat-card-subtitle>{{task.people}}/{{task.subscrebedPeople}} people already accepted</mat-card-subtitle>
   </mat-card-header>
-  <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
   <mat-card-content>
     <p>
       {{task.description}}
