--- a/src/app/+categories/tasks-view.component.html
+++ b/src/app/+categories/tasks-view.component.html
@@ -1,3 +1,6 @@
+<!-- <app-categories [categories]="categories">
+</app-categories> -->
+
 <ul>
         <li> <a routerLink="all" routerLinkActive="active">all</a></li>
         <div *ngFor="let category of categories">
