--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -41,6 +41,7 @@
           </div>
         </mat-error>
         <br>
+        <!-- BUG somewhere here -->
         <mat-form-field class="example-full-width">
           <input formControlName="confirmPassword" required type="password" matInput placeholder="Confirm password" [errorStateMatcher]="matcher">
         </mat-form-field>
