--- a/src/app/+tasks/task/task.component.html
+++ b/src/app/+tasks/task/task.component.html
@@ -2,7 +2,7 @@
   <mat-card class="task-card">
     <mat-card-header>
       <mat-card-title>{{task.title}}</mat-card-title>
-      <mat-card-subtitle>{{task.people}}/{{task.subscrebedPeople}} people already accepted</mat-card-subtitle>
+      <mat-card-subtitle>{{task.people}}/{{task.numberSubscribedPeople}} people already accepted</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <p>
