--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-alert></app-alert>
-<mat-card *ngIf="isLoggedIn$ | async as isLoggedIn">
-        <!-- <mat-card> -->
+<!-- <mat-card *ngIf="isLoggedIn$ | async as isLoggedIn"> -->
+        <mat-card>
     <mat-grid-list cols="3" rowHeight = "30px">
         <mat-grid-tile>
             <mat-menu #appMenu="matMenu">
