--- a/src/app/+tasks/task-edit/task.edit.component.html
+++ b/src/app/+tasks/task-edit/task.edit.component.html
@@ -7,10 +7,8 @@
         <mat-card-content>
                 <form [formGroup]="taskEditForm" (ngSubmit)="onSubmit()">
 
-                        <mat-form-field>
-                                <mat-label>
-                                        Title:
-                                </mat-label>
+                        <mat-form-field class="example-full-width">
+                                <mat-label>Title:</mat-label>
                                 <input matInput type="text" formControlName="title" required>
                                 <mat-error>
                                         <div class="alert alert-danger" *ngIf="taskEditForm.controls['title'].invalid && taskEditForm.controls['title'].touched">
@@ -28,52 +26,69 @@
                         </mat-form-field>
                         <br>
 
-                        <mat-form-field>
-                                <mat-label>
-                                        Description:
-                                </mat-label>
+                        <mat-form-field class="example-full-width">
+                                <mat-label>Description:</mat-label>
                                 <input matInput type="text" formControlName="description">
                         </mat-form-field>
 
-
                         <br>
-                        <mat-form-field>
-                                <mat-label>
-                                        Needed people:
-                                </mat-label>
-                                <input matInput type="text" formControlName="people">
+                        <mat-form-field class="example-full-width">
+                                <mat-label>People:</mat-label>
+                                <input matInput type="number" min="1" max="5" formControlName="people">
+                                <mat-error>
+                                        <div class="alert alert-danger" *ngIf="taskEditForm.controls['people'].invalid && taskEditForm.controls['people'].touched">
+                                                <div *ngIf="taskEditForm.controls['people'].errors.required">
+                                                        People is required.
+                                                </div>
+                                                <div *ngIf="taskEditForm.controls['people'].errors.max">
+                                                        Max needed people 5
+                                                </div>
+                                                <div *ngIf="taskEditForm.controls['people'].errors.min">
+                                                        Min needed people 1
+                                                </div>
+                                        </div>
 
+                                </mat-error>
                         </mat-form-field>
 
                         <br>
-
-
                         <!-- <label>
                                 SubscribedPoeple:
                                 <input matInput type="text" formControlName="subscrebedPeople">
                         </label>
                         <br> -->
 
+                        <mat-form-field>
+                                <mat-label>Price:</mat-label>
+                                <input matInput type="number" min="0" formControlName="price">
+                                <mat-error>
+                                        <div class="alert alert-danger" *ngIf="taskEditForm.controls['price'].invalid && taskEditForm.controls['price'].touched">
+                                                <div *ngIf="taskEditForm.controls['price'].errors.required">
+                                                        People is required.
+                                                </div>
+                                                <div *ngIf="taskEditForm.controls['price'].errors.min">
+                                                        Min price equels 0.
+                                                </div>
+                                        </div>
+                                </mat-error>
+                        </mat-form-field>
 
-                        <label>
-                                Price:
-                                <input matInput type="text" formControlName="price">
-                        </label>
                         <br>
 
-                        <mat-form-field>
-                                <mat-label>
-                                        When:
-                                </mat-label>
-                                <!-- <input matInput [matDatepicker]="picker" placeholder="Choose a date"
-                                        MatFormFieldControl="date">
+                        <mat-form-field class="example-full-width">
+                                <mat-label>When:</mat-label>
+                                <input matInput [matDatepicker]="picker" placeholder="Choose a date"
+                                        formControlName="date">
                                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                                <mat-datepicker #picker></mat-datepicker> -->
-                                <input matInput type="date" formControlName="date">
+                                <mat-datepicker #picker></mat-datepicker>
+                                <!-- <input matInput type="date" formControlName="date"> -->
                                 <mat-error>
                                         <div class="alert alert-danger" *ngIf="taskEditForm.controls['date'].invalid && taskEditForm.controls['date'].touched">
+                                                <div *ngIf="taskEditForm.controls['date'].errors.required">
+                                                        Date is required.
+                                                </div>
                                                 <div *ngIf="taskEditForm.controls['date'].errors.dateInvalid">
-                                                        Date must be equel or more then current Date
+                                                        Date must more then current Date
                                                 </div>
                                         </div>
                                 </mat-error>
@@ -87,15 +102,15 @@
                                 <input type="text" formControlName="status">
                         </label>
                         <br> -->
-                        <label>
-                                Category:
-                                <input matInput type="text" formControlName="categoryId">
-                        </label>
+                        <mat-form-field>
+                                <mat-label>Category:</mat-label>
+                                <input matInput type="number" formControlName="categoryId">
+                        </mat-form-field>
                         <br>
-                        <!-- <label>
-                                User:
-                                <input type="text" formControlName="userId">
-                        </label> -->
+                        <mat-form-field>
+                                <mat-label>User:</mat-label>
+                                <input matInput type="number" formControlName="userId">
+                        </mat-form-field>
 
                         <p>
                                 <button type='submit' [disabled]="taskEditForm.invalid">Send on Review</button>
