--- a/src/app/+tasks/task-edit/task.edit.component.html
+++ b/src/app/+tasks/task-edit/task.edit.component.html
@@ -7,7 +7,7 @@
         <mat-card-content>
                 <form [formGroup]="taskEditForm" (ngSubmit)="onSubmit()">
 
-                        <mat-form-field class="example-full-width">
+                        <mat-form-field>
                                 <mat-label>Title:</mat-label>
                                 <input matInput type="text" formControlName="title" required>
                                 <mat-error>
@@ -77,11 +77,9 @@
 
                         <mat-form-field class="example-full-width">
                                 <mat-label>When:</mat-label>
-                                <input matInput [matDatepicker]="picker" placeholder="Choose a date"
-                                        formControlName="date">
+                                <input matInput [matDatepicker]="picker" placeholder="Choose a date" formControlName="date">
                                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                 <mat-datepicker #picker></mat-datepicker>
-                                <!-- <input matInput type="date" formControlName="date"> -->
                                 <mat-error>
                                         <div class="alert alert-danger" *ngIf="taskEditForm.controls['date'].invalid && taskEditForm.controls['date'].touched">
                                                 <div *ngIf="taskEditForm.controls['date'].errors.required">
@@ -97,21 +95,21 @@
 
 
                         <br>
-                        <!-- <label>
-                                Status:
-                                <input type="text" formControlName="status">
-                        </label>
-                        <br> -->
+
                         <mat-form-field>
-                                <mat-label>Category:</mat-label>
-                                <input matInput type="number" formControlName="categoryId">
-                        </mat-form-field>
-                        <br>
-                        <mat-form-field>
-                                <mat-label>User:</mat-label>
-                                <input matInput type="number" formControlName="userId">
+                                <mat-select placeholder="Category" formControlName="categoryId">
+                                        <mat-option *ngFor="let category of categories" [value]="category.id" >
+                                                {{category.name}}
+                                        </mat-option>
+                                </mat-select>
+                                <div class="alert alert-danger" *ngIf="taskEditForm.controls['categoryId'].invalid && taskEditForm.controls['categoryId'].touched">
+                                        <div *ngIf="taskEditForm.controls['categoryId'].errors.required">
+                                                Category is required.
+                                        </div>
+                                </div>
                         </mat-form-field>
 
+                        <br>
                         <p>
                                 <button type='submit' [disabled]="taskEditForm.invalid">Send on Review</button>
                                 <button type="button" [routerLink]="['/tasks']">Back</button>
