--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
         <mat-grid-tile>
                 <h2>Orange</h2>
         </mat-grid-tile>
-        <mat-grid-tile><button>
+        <mat-grid-tile><button mat-button routerLink="/categories/newTask" >
                 <mat-icon>add</mat-icon>
             </button></mat-grid-tile>
     </mat-grid-list>
