--- a/src/app/+tasks/task-edit/task.edit.component.html
+++ b/src/app/+tasks/task-edit/task.edit.component.html
@@ -95,8 +95,7 @@
                         <br>
 
                         <mat-form-field>
-                                <mat-select [compareWith]="compareFn" placeholder="Category" formControlName="categoryId"
-                                        [(ngModel)]="currentCategory">
+                                <mat-select  placeholder="Category" formControlName="categoryId">
                                         <mat-option *ngFor="let category of categories" [value]="category.id">
                                                 {{category.name}}
                                         </mat-option>
@@ -111,7 +110,7 @@
                         <br>
                         <p>
                                 <button type='submit' [disabled]="taskEditForm.invalid">Send on Review</button>
-                                <button type="button" [routerLink]="['/tasks']">Back</button>
+                                <button type="button" (click)="goToBack()">Back</button>
                         </p>
 
                 </form>
