--- a/src/app/+tasks/tasks.component.html
+++ b/src/app/+tasks/tasks.component.html
@@ -1,7 +1,7 @@
 <ul>
         <li> <a routerLink="/categories" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">all</a></li>
         <div *ngFor="let category of categories">
-                <li> <a (click) = "categoryClick(category.id)" routerLink="/categories/{{category.id}}" routerLinkActive="active">{{category.name}}</a></li>
+                <li> <a  routerLink="/categories/{{category.id}}" routerLinkActive="active">{{category.name}}</a></li>
         </div>
 </ul>
 
