started dialof for delete

--- a/src/app/+tasks/tasks-table/tasks-table.component.html
+++ b/src/app/+tasks/tasks-table/tasks-table.component.html
@@ -44,7 +44,7 @@
                 Edit
             </button>
 
-            <button mat-button>
+            <button mat-button (click)="deleteTask(task)">
                 Delete
             </button>
         </mat-cell>
