--- a/src/app/+tasks/tasks-table/tasks-table.component.html
+++ b/src/app/+tasks/tasks-table/tasks-table.component.html
@@ -40,10 +40,9 @@
     <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
         <mat-cell *matCellDef="let task">
-            <button mat-button>
+            <button mat-button (click)="editTask(task)">
                 Edit
             </button>
-
             <button mat-button (click)="deleteTask(task)">
                 Delete
             </button>
