--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <mat-grid-list cols="3" rowHeight = "30px">
         <mat-grid-tile>
             <mat-menu #appMenu="matMenu">
-                <button mat-menu-item>PROFILE</button>
+                <button mat-menu-item [routerLink]="['/profile']">PROFILE</button>
                 <button mat-menu-item>MY TASKS</button>
                 <button mat-menu-item (click) = "logout()" >LOGOUT</button>
             </mat-menu>
