--- a/src/app/profile/user-profile.component.html
+++ b/src/app/profile/user-profile.component.html
@@ -1,1 +1,27 @@
-<h2>User profile</h2>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>
+      <h2>Profile</h2>
+    </mat-card-title>
+  </mat-card-header>
+  <form [formGroup]="profileEditForm" (ngSubmit)="onSubmit()">
+
+      <mat-form-field>
+              <mat-label>Name:</mat-label>
+              <input matInput type="text" formControlName="firstName" required>
+              <mat-error>
+                      <div class="alert alert-danger" *ngIf="profileEditForm.controls['firstName'].invalid && profileEditForm.controls['firstName'].touched">
+                              <div *ngIf="profileEditForm.controls['firstName'].errors.required">
+                                      Name is required.
+                              </div>
+                              <div *ngIf="profileEditForm.controls['firstName'].errors.minlength">
+                                      Name must be at least 3 characters long.
+                              </div>
+                              <div *ngIf="profileEditForm.controls['firstName'].errors.maxlength">
+                                      Name must be less than 255 characters long.
+                              </div>
+                      </div>
+              </mat-error>
+      </mat-form-field>
+  </form>
+</mat-card>
