add dialog window

--- a/src/app/+tasks/task/task.component.html
+++ b/src/app/+tasks/task/task.component.html
@@ -12,7 +12,7 @@
       {{task.price}}
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button (click)="onAccept(task.id)">ACCEPT</button>
+      <button mat-button (click)="onAccept(task)">ACCEPT</button>
     </mat-card-actions>
   </mat-card>
 </div>
