update basic fields except password

--- a/src/app/+profile/user-profile/user-profile.component.html
+++ b/src/app/+profile/user-profile/user-profile.component.html
@@ -112,7 +112,8 @@
                                 </mat-error>
                         </mat-form-field>
                 </div>
-                <button mat-button color="primary" (click)="onPswdChange()">Save</button>
+                <button mat-button color="primary" (click)="onSave()">Save</button>
                 <button mat-button color="primary" (click)="onCancel()">Cancel</button>
+                <!-- <div class="alert alert-danger" *ngIf=""> -->
         </form>
 </mat-card>
